# Persistent-Data-Structures

./: .gitignore  CMakeLists.txt  configure.bat
doc/: _contract_exceptions_8h_source.html  _hamt_utils_8h_source.html  _i_undoable_8h_source.html  _persistent_array_8h_source.html  _persistent_hash_map_8h_source.html  _persistent_list_8h_source.html  _safe_deref_8h_source.html  _undo_redo_manager_8h_source.html  _undoable_persistent_collection_8h_source.html  _vector_utils_8h_source.html  annotated.html  class_exceptions_1_1_assertion_failure-members.html  class_exceptions_1_1_assertion_failure.html  class_exceptions_1_1_post_condition_failure-members.html  class_exceptions_1_1_post_condition_failure.html  class_exceptions_1_1_pre_condition_failure-members.html  class_exceptions_1_1_pre_condition_failure.html  class_persistence_1_1_detail_1_1_eraser_visitor-members.html  class_persistence_1_1_detail_1_1_eraser_visitor.html  class_persistence_1_1_detail_1_1_hamt_bitmap_node-members.html  class_persistence_1_1_detail_1_1_hamt_bitmap_node.html  class_persistence_1_1_detail_1_1_hamt_collision_node-members.html  class_persistence_1_1_detail_1_1_hamt_collision_node.html  class_persistence_1_1_detail_1_1_hamt_node_base-members.html  class_persistence_1_1_detail_1_1_hamt_node_base.html  class_persistence_1_1_detail_1_1_hamt_value_node-members.html  class_persistence_1_1_detail_1_1_hamt_value_node.html  class_persistence_1_1_detail_1_1_hamt_visitor_base-members.html  class_persistence_1_1_detail_1_1_hamt_visitor_base.html  class_persistence_1_1_detail_1_1_i_hamt_node-members.html  class_persistence_1_1_detail_1_1_i_hamt_node.html  class_persistence_1_1_detail_1_1_i_hamt_visitor-members.html  class_persistence_1_1_detail_1_1_i_hamt_visitor.html  class_persistence_1_1_detail_1_1_inserter_visitor-members.html  class_persistence_1_1_detail_1_1_inserter_visitor.html  class_persistence_1_1_detail_1_1_searcher_visitor-members.html  class_persistence_1_1_detail_1_1_searcher_visitor.html  class_persistence_1_1_list_iterator-members.html  class_persistence_1_1_list_iterator.html  class_persistence_1_1_list_reverse_iterator-members.html  (+52 more)
doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_8.js  functions_0.js  functions_10.js  functions_3.js  (+15 more)
src/: CMakeLists.txt
src/Collections/: HamtUtils.h  PersistentArray.h  PersistentHashMap.h  PersistentList.h  UndoablePersistentCollection.h
src/Common/: CMakeLists.txt  ContractExceptions.cpp  ContractExceptions.h  SafeDeref.h  VectorUtils.h
src/Persistence/: CMakeLists.txt  PersistentArray.h
src/Undo/: CMakeLists.txt  IUndoable.h  UndoRedoManager.h
test/: CMakeLists.txt
test/Collections/: PersistentArrayTests.cpp  PersistentHashMapTests.cpp  PersistentListTests.cpp
test/TestUtils/: OperatorsCountingElement.cpp  OperatorsCountingElement.h
test/Undo/: UndoRedoManagerTests.cpp
